--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.khalti_clone">
+    <users-permission android:name="android,permission,CAMERA"/>
    <application
         android:label="khalti_clone"
         android:name="${applicationName}"
