--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.khalti_clone">
-    <users-permission android:name="android,permission,CAMERA"/>
+    <uses-permission android:name="android,permission.CAMERA"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    R<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
    <application
         android:label="khalti_clone"
         android:name="${applicationName}"
